projects/vortex/example1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-1
spec:
  template:
    spec:
      containers:
      - name: example-1cssc
        resources:
          requests:
            cpu: 500m
            memory: "256Mi"
          limits:
            memory: "1.5Gi"
