projects/vortex/example1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symbius
  annotations:
    alb.ingress.kubernetes.io/group.name: example-1stage
    alb.ingress.kubernetes.io/group.order: "125"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:5946289051:certificate/f265
spec:
  tls:
  - hosts:
    - example-1.dubizzlelabs.run
    - example-1.dubizzlelabs.run
  rules:
  - host: example-1.dubizzlelabs.run
    http:
      paths:
      - path: /
        pathType: Prx
        backend:
          service:
            name: symbius
            port:
              number: 80
